changing main_page to index

--- a/stat_streaks.html
+++ b/stat_streaks.html
@@ -9,7 +9,7 @@
         <link type="text/css" rel="stylesheet" media="all" href="css_death_blow.css" />
         <h1 class="center-text">Stat Streaks</h1>
         <div class="main-container">
-            <button id="MainButton" onclick="window.location.href='main_page.html'">Main Page</button>
+            <button id="MainButton" onclick="window.location.href='index.html'">Main Page</button>
             <p id="main"></p>
         <div class="prediction-container">
             <button id="GamePredictionsButton" onclick="window.location.href='game_predictions.html'">Game Predictions</button>
