--- a/data_visualizations.html
+++ b/data_visualizations.html
@@ -25,7 +25,7 @@
     <div class="page-layout">
         <div class="navigation-sidebar">
             <div class="main-container">
-                <button id="MainButton" onclick="window.location.href='main_page.html'">Main Page</button>
+                <button id="MainButton" onclick="window.location.href='index.html'">Main Page</button>
                 <p id="main"></p>
             </div>
             <div class="prediction-container">
