--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
         <h1 class="center-text">Cbbontop</h1>
-        <img src="cbbontop logo.png" alt="Page logo", style="width:100px;height:100px;">
+        <img src="cbbontop logo.PNG" alt="Page logo", style="width:100px;height:100px;">
     </head>
     <body>
         <link type="text/css" rel="stylesheet" media="all" href="css_main_page.css" />
