make it look more professional

--- a/data_visualizations.html
+++ b/data_visualizations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Visualizations - Cbbontop</title>
-    <link type="text/css" rel="stylesheet" media="all" href="css_death_blow.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="css_data_visualization.css" />
     <style>
         .page-layout {
             display: flex;
