--- a/data_visualizations.html
+++ b/data_visualizations.html
@@ -29,11 +29,11 @@
                 <p id="main"></p>
             </div>
             <div class="prediction-container">
-                <button id="GamePredictionsButton" onclick="window.location.href='game_predictions.html'">Game Predictions</button>
+                <button id="GamePredictionsButton" onclick="window.location.href='game_predictions.html'">Game Predictions - in progress</button>
                 <p id="predictions"></p>
             </div>
             <div class="DeathBlow-container">
-                <button id="DeathBlowButton" onclick="window.location.href='death_blow.html'">Death Blow</button>
+                <button id="DeathBlowButton" onclick="window.location.href='death_blow.html'">Death Blow - in progress</button>
                 <p id="DeathBlow"></p>
             </div>
             <div class="Visualizations-container">
@@ -41,15 +41,15 @@
                 <p id="DataViz"></p>
             </div>
             <div class="StatLeaders-container">
-                <button id="StatsButton" onclick="window.location.href='stat_leaders.html'">Stats Leaders</button>
+                <button id="StatsButton" onclick="window.location.href='stat_leaders.html'">Stats Leaders - in progress</button>
                 <p id="Stats"></p>
             </div>
             <div class="Streaks-container">
-                <button id="StreaksButton" onclick="window.location.href='stat_streaks.html'">Stat Streaks</button>
+                <button id="StreaksButton" onclick="window.location.href='stat_streaks.html'">Stat Streaks - in progress</button>
                 <p id="Streaks"></p>
             </div>
             <div class="BracketBuilder-container">
-                <button id="BracketButton" onclick="window.location.href='bracket_builder.html'">Bracket Builder</button>
+                <button id="BracketButton" onclick="window.location.href='bracket_builder.html'">Bracket Builder - in progress</button>
                 <p id="Bracket"></p>
             </div>
         </div>
