--- a/stat_leaders.html
+++ b/stat_leaders.html
@@ -12,22 +12,22 @@
             <button id="MainButton" onclick="window.location.href='index.html'">Main Page</button>
             <p id="main"></p>
         <div class="prediction-container">
-            <button id="GamePredictionsButton" onclick="window.location.href='game_predictions.html'">Game Predictions</button>
+            <button id="GamePredictionsButton" onclick="window.location.href='game_predictions.html'">Game Predictions - in progress</button>
             <p id="predictions"></p>
         <div class="DeathBlow-container">
-            <button id="DeathBlowButton" onclick="window.location.href='death_blow.html'">Death Blow</button>
+            <button id="DeathBlowButton" onclick="window.location.href='death_blow.html'">Death Blow - in progress</button>
             <p id="DeathBlow"></p>
         <div class="Visualizations-container">
             <button id="VisualizationButton" onclick="window.location.href='data_visualizations.html'">Stats Visualized</button>
             <p id="DataViz"></p>
         <div class="StatLeaders-container">
-            <button id="StatsButton" onclick="window.location.href='stat_leaders.html'">Stats Leaders</button>
+            <button id="StatsButton" onclick="window.location.href='stat_leaders.html'">Stats Leaders - in progress</button>
             <p id="Stats"></p>
         <div class="Streaks-container">
-            <button id="StreaksButton" onclick="window.location.href='stat_streaks.html'">Stat Streaks</button>
+            <button id="StreaksButton" onclick="window.location.href='stat_streaks.html'">Stat Streaks - in progress</button>
             <p id="Streaks"></p>
         <div class="BracketBuilder-container">
-            <button id="BracketButton" onclick="window.location.href='bracket_builder.html'">Bracket Builder</button>
+            <button id="BracketButton" onclick="window.location.href='bracket_builder.html'">Bracket Builder - in progress</button>
             <p id="Bracket"></p>
     </body>
 </html>
