--- a/data_visualizations.html
+++ b/data_visualizations.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable=no">
     <title>Data Visualizations - Cbbontop</title>
     <link type="text/css" rel="stylesheet" media="all" href="css_data_visualization.css" />
     <style>
